--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 title: Cody Winton
 email: me@codywinton.com
+tagline: Developer | CEO | Creative
 description: > # this means to ignore newlines until "baseurl:"
   I'm a multi-stack dev & creative problem-solver. Follow me anywhere @codytwinton
 baseurl: "" # the subpath of your site, e.g. /blog
