--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: Cody Winton
-email: me@codywinton.com
+email: cody@codywinton.com
 tagline: Developer | CEO | Creative
 description: > # this means to ignore newlines until "baseurl:"
   I'm a multi-stack dev & creative problem-solver. Follow me anywhere @codytwinton
@@ -27,7 +27,7 @@ current-work:
 
 contact-me:
   title: Contact Me
-  link: "mailto:me@codywinton.com"
+  link: "mailto:cody@codywinton.com"
 
 social:
   facebook: codytwinton
