--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ description: 'I''m a multi-stack dev & creative problem-solver. Follow me anywhe
   @codytwinton
 
 '
-baseurl: 
+baseurl:
 url: http://codywinton.com
 button-1:
   title: Current Work
@@ -32,3 +32,4 @@ social:
 markdown: kramdown
 gems:
 - jekyll-feed
+- jekyll-redirect-from
