--- a/.editorconfig
+++ b/.editorconfig
@@ -8,6 +8,6 @@ end_of_line = lf
 charset = utf-8
 
 # 2 space indentation
-[*.yaml, *.yml, *.scss, *.css]
+[*.yaml, *.yml, *.scss, *.css, *.html]
 indent_style = space
 indent_size = 2
