--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,11 @@ description: 'I''m a multi-stack dev & creative problem-solver. Follow me anywhe
   @codytwinton
 
 '
+buttons:
+- title: Current Work
+  link: http://credntia.com
+- title: Contact Me
+  link: mailto:cody@codywinton.com
 button-1:
   title: Current Work
   link: http://credntia.com
