--- a/_config.yml
+++ b/_config.yml
@@ -14,14 +14,15 @@ defaults:
     type: pages
   values:
     layout: page
+    subtitle: 
 - scope:
     path: ''
     type: posts
   values:
     permalink: "/blog/:title/"
     layout: post
+    subtitle: 
 url: http://codywinton.com
-tagline: Developer | CEO | Creative
 email: cody@codywinton.com
 description: 'I''m a multi-stack dev & creative problem-solver. Follow me anywhere
   @codytwinton
