Updated Hero Image

--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,7 @@ defaults:
   values:
     layout: page
     subtitle: 
+    hero_image: "/uploads/hero.jpg"
 - scope:
     path: ''
     type: posts
