--- a/.editorconfig
+++ b/.editorconfig
@@ -5,9 +5,10 @@ root = true
 
 [*]
 end_of_line = lf
+insert_final_newline = true
 charset = utf-8
 
 # 2 space indentation
-[*.yaml, *.yml, *.scss, *.css, *.html]
+[*.{yaml,yml,scss,css,html}]
 indent_style = space
 indent_size = 2
