--- a/_config.yml
+++ b/_config.yml
@@ -25,6 +25,7 @@ defaults:
     layout: page
     subtitle: 
     hero_image: "/uploads/hero.jpg"
+    is_header_page: false
 - scope:
     path: ''
     type: posts
@@ -37,11 +38,11 @@ url: http://codywinton.com
 email: cody@codywinton.com
 description: 'Cody Winton: I''m a multi-stack developer & a creative problem solver.
   I''m the CEO at Credntia. Follow me anywhere @codytwinton'
-google_analytics:
-  tracking_id: UA-103616440-1
 plugins:
 - jekyll-feed
 - jekyll-redirect-from
+google_analytics:
+  tracking_id: UA-103616440-1
 sass:
   sass_dir: styles/
   style: compressed
