--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ defaults:
     layout: page
     subtitle: 
     hero_image: 
-    is_header_page: false
+    is_footer_page: false
     action_button:
       title: 
       link: 
