--- a/_data/info.yml
+++ b/_data/info.yml
@@ -1,18 +1,12 @@
-contacts:
+column1:
 - title: Contact Me
   username: cody@codywinton.com
   url: "mailto:"
 - title: Blog
   username: codytwinton
   url: https://medium.com/@
-- title: GitHub
-  username: codytwinton
-  url: https://github.com/
-- title: Stack Overflow
-  username: 2344897
-  url: https://stackoverflow.com/users/
 
-socials:
+column2:
 - title: Facebook
   username: codytwinton
   url: http://facebook.com/
@@ -22,6 +16,14 @@ socials:
 - title: Instagram
   username: codytwinton
   url: http://instagram.com/
+
+column3:
+- title: GitHub
+  username: codytwinton
+  url: https://github.com/
+- title: Stack Overflow
+  username: 2344897
+  url: https://stackoverflow.com/users/
 - title: LinkedIn
   username: codytwinton
   url: https://www.linkedin.com/in/
