--- a/_config.yml
+++ b/_config.yml
@@ -33,6 +33,7 @@ description: 'Cody Winton: I''m a multi-stack developer & a creative problem sol
 plugins:
 - jekyll-feed
 - jekyll-redirect-from
+- jekyll-sitemap
 google_analytics:
   tracking_id: UA-103616440-1
 sass:
