--- a/_config.yml
+++ b/_config.yml
@@ -30,15 +30,30 @@ url: http://codywinton.com
 email: cody@codywinton.com
 description: 'Cody Winton: I''m a multi-stack developer & a creative problem solver.
   I''m the CEO at Credntia. Follow me anywhere @codytwinton'
-plugins:
-- jekyll-feed
-- jekyll-redirect-from
-- jekyll-sitemap
+author:
+  picture: /uploads/profile-image.jpg
+  twitter: codytwinton
 google_analytics:
   tracking_id: UA-103616440-1
+logo: /uploads/profile-image.jpg
 sass:
   sass_dir: styles/
   style: compressed
+twitter:
+  username: codytwinton
+social:
+  name: Cody Winton
+  links:
+    - https://twitter.com/codytwinton
+    - https://www.facebook.com/codytwinton
+    - https://www.linkedin.com/in/codytwinton
+    - https://plus.google.com/+CodyWinton
+    - https://github.com/codytwinton
+plugins:
+- jekyll-feed
+- jekyll-redirect-from
+- jekyll-seo-tag
+- jekyll-sitemap
 baseurl: 
 markdown: kramdown
 permalink: pretty
