Updated the home page and description copy

--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ defaults:
 url: http://codywinton.com
 email: cody@codywinton.com
 description: 'Cody Winton: I''m a multi-stack developer & a creative problem solver.
-  I''m the CEO at Credntia. Follow me anywhere @codytwinton'
+  Follow me anywhere @codytwinton'
 author:
   picture: "/uploads/profile-image.jpg"
   twitter: codytwinton
