--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "http://codywinton.com",
   "dependencies": {
     "bootstrap": "^4.0.0-beta.2",
+    "fontawesome": "^4.7.2",
     "jquery": "^3.2.1",
     "popper.js": "^1.13.0"
   },
