--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ defaults:
     action_button:
       title: 
       link: 
-    is_footer_page: false
+    is_footer: false
 - scope:
     path: ''
     type: posts
