--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ defaults:
   values:
     layout: resume
     skills:
-    - title: Languages
+    - type: 
       values:
       - title: 
         rank: 0
