--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,16 @@ collections:
 defaults:
 - scope:
     path: ''
+    type: work
+  values:
+    link: 
+    jobs:
+    - title: 
+      start_date: 
+      end_date: 
+      body: 
+- scope:
+    path: ''
     type: pages
   values:
     layout: page
