--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ defaults:
     path: resume.markdown
     type: pages
   values:
-    layout: page
+    layout: resume
     skills:
     - type: 
       values:
