--- a/_config.yml
+++ b/_config.yml
@@ -17,6 +17,11 @@ collections:
 defaults:
 - scope:
     path: ''
+    type: skills
+  values:
+    rank: 
+- scope:
+    path: ''
     type: work
   values:
     display_title: 
