Updated to use https

--- a/_data/socials.yml
+++ b/_data/socials.yml
@@ -4,15 +4,15 @@
   fa_icon: fa-envelope
 - title: Facebook
   username: codytwinton
-  url: http://facebook.com/
+  url: https://facebook.com/
   fa_icon: fa-facebook
 - title: Twitter
   username: codytwinton
-  url: http://twitter.com/
+  url: https://twitter.com/
   fa_icon: fa-twitter
 - title: Instagram
   username: codytwinton
-  url: http://instagram.com/
+  url: https://instagram.com/
   fa_icon: fa-instagram
 - title: Medium
   username: codytwinton
