--- a/_config.yml
+++ b/_config.yml
@@ -60,7 +60,7 @@ defaults:
   values:
     permalink: "/blog/:title/"
     layout: post
-url: http://codywinton.com
+url: https://codywinton.com
 email: cody@codywinton.com
 description: 'Cody Winton: I''m a multi-stack developer & a creative problem solver.
   Follow me anywhere @codytwinton'
@@ -68,7 +68,7 @@ author:
   picture: "/uploads/profile-image.jpg"
   twitter: codytwinton
 current_work:
-  url: http://truecoders.io
+  url: https://truecoders.io
 google_analytics:
   tracking_id: UA-103616440-1
 logo: "/uploads/profile-image.jpg"
