--- a/_data/socials.yml
+++ b/_data/socials.yml
@@ -1,36 +1,18 @@
 - title: Email
-  username: cody@codywinton.com
-  url: "mailto:"
-  fa_icon: fa-envelope
+  url: "mailto:cody@codywinton.com"
 - title: Facebook
-  username: codytwinton
-  url: https://facebook.com/
-  fa_icon: fa-facebook
+  url: https://facebook.com/codytwinton
 - title: Twitter
-  username: codytwinton
-  url: https://twitter.com/
-  fa_icon: fa-twitter
+  url: https://twitter.com/codytwinton
 - title: Instagram
-  username: codytwinton
-  url: https://instagram.com/
-  fa_icon: fa-instagram
+  url: https://instagram.com/codytwinton
 - title: Medium
-  username: codytwinton
-  url: https://medium.com/@
-  fa_icon: fa-medium
+  url: https://medium.com/@codytwinton
 - title: LinkedIn
-  username: codytwinton
-  url: https://www.linkedin.com/in/
-  fa_icon: fa-linkedin
+  url: https://www.linkedin.com/in/codytwinton
 - title: GitHub
-  username: codytwinton
-  url: https://github.com/
-  fa_icon: fa-github
+  url: https://github.com/codytwinton
 - title: Stack Overflow
-  username: 2344897
-  url: https://stackoverflow.com/users/
-  fa_icon: fa-stack-overflow
+  url: https://stackoverflow.com/users/2344897
 - title: Angel List
-  username: codytwinton
-  url: https://angel.co/
-  fa_icon: fa-angellist
+  url: https://angel.co/codytwinton
