--- a/.forestry/front_matter/templates/pages.yml
+++ b/.forestry/front_matter/templates/pages.yml
@@ -14,12 +14,6 @@ fields:
   name: display_title
   label: Display Title
   description: e.g. About Me
-- name: subtitle
-  label: Subtitle
-  type: text
-  hidden: false
-  default: 
-  description: e.g. My story begins...
 - type: blocks
   name: sections
   label: Sections
@@ -28,5 +22,6 @@ fields:
   - partial-columns
   description: The sections to include in the page
 pages:
-- index.markdown
-- 404.markdown
+- index.md
+- 404.md
+- resume.md
