--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 ---
 # Jekyll Settings
-title: TrueCoders
+title: Cody Winton
 timezone: America/Chicago
-url: https://truecoders.io
+url: https://codywinton.com
 baseurl: 
 # Enable once Forestry supports custom collections_dir
 # collections_dir: collections
