--- a/.forestry/front_matter/templates/work.yml
+++ b/.forestry/front_matter/templates/work.yml
@@ -7,7 +7,7 @@ fields:
   type: text
   hidden: false
   default: ''
-  description: e.g. Credntia
+  description: Client/Company name
   config:
     required: true
 - name: subtitle
@@ -15,15 +15,31 @@ fields:
   type: text
   hidden: false
   default: 
-  description: e.g. Your Identity Wherever You Are
+  description: Client/Company subtitle or description
 - name: date
   label: Work Date
   type: datetime
   hidden: false
   default: ''
-  description: When did this project complete?
+  description: Project completion date
   config:
     time_format: " "
+- type: tag_list
+  label: Categories
+  name: categories
+  description: Project categories
+- type: image_gallery
+  name: images
+  label: Gallery
+  description: Project portfolio
+- type: textarea
+  name: testimonial
+  label: Testimonial
+  description: Client/Company quote or testimonial
+  config:
+    wysiwyg: true
+    schema:
+      format: markdown
 - type: field_group_list
   name: profiles
   label: Client Profiles
