Updated forestry settings

--- a/.forestry/front_matter/templates/pages.yml
+++ b/.forestry/front_matter/templates/pages.yml
@@ -18,9 +18,7 @@ fields:
   name: sections
   label: Sections
   template_types:
+  - partial-github
   - partial-collection
   - partial-columns
   description: The sections to include in the page
-pages:
-- index.md
-- 404.md
