Updated to use v0.5.0 of the remote theme

--- a/_data/menus.yml
+++ b/_data/menus.yml
@@ -1,9 +1,10 @@
 ---
-header:
-- url: "#work"
+home:
+- identifier: 
+  url: "#work"
   weight: 1
   title: Work
 - identifier: 
   url: "#about"
-  weight: 1
+  weight: 2
   title: About
