--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,29 @@ sass:
   style: compressed
 strict_front_matter: true
 
-# Jekyll SEO Settings
+
+# Collections
+collections:
+  work:
+    title: Work
+    output: false
+
+
+# Defaults for Layouts
+defaults:
+- scope:
+    path: ''
+    type: work
+  values:
+    layout: page
+- scope:
+    path: ''
+    type: pages
+  values:
+    layout: page
+
+
+# jekyll-seo-tag settings
 description: 'Cody Winton: I''m a multi-stack developer & a creative problem solver. Follow me anywhere @codytwinton'
 author:
   name: Cody Winton
@@ -41,21 +63,9 @@ social:
 twitter:
   username: codytwinton
 
-# Collections
-collections:
-  work:
-    title: Work
-    output: false
 
-# Defaults for Layouts
-defaults:
-- scope:
-    path: ''
-    type: work
-  values:
-    layout: page
-- scope:
-    path: ''
-    type: pages
-  values:
-    layout: page
+# jekyll-titles-from-headings
+titles_from_headings:
+  enabled: false
+  strip_title: false
+  collections: false
