--- a/.forestry/front_matter/templates/data-info.yml
+++ b/.forestry/front_matter/templates/data-info.yml
@@ -1,32 +1,27 @@
 ---
-label: Data - Info
+label: data-info
 hide_body: false
 is_partial: false
 fields:
-- type: field_group
-  label: Info
-  name: info
-  description: General site information
-  fields:
-  - type: text
-    name: name
-    label: Name
-    description: Personal name
-    config:
-      required: true
-  - type: text
-    name: email
-    label: Email
-    description: Contact email address
-    config:
-      required: true
-  - type: text
-    name: company_name
-    label: Company Name
-    description: Company name
-  - type: text
-    name: ga_tracking_id
-    label: Google Analytics Tracking ID
-    description: e.g UA-123456789-1
-data_files:
+- type: text
+  name: name
+  label: Name
+  description: Personal name
+  config:
+    required: true
+- type: text
+  name: email
+  label: Email
+  description: Contact email address
+  config:
+    required: true
+- type: text
+  name: company_name
+  label: Company Name
+  description: Company name
+- type: text
+  name: ga_tracking_id
+  label: Google Analytics Tracking ID
+  description: e.g UA-123456789-1
+pages:
 - _data/info.yml
