--- a/.forestry/front_matter/templates/pages.yml
+++ b/.forestry/front_matter/templates/pages.yml
@@ -1,5 +1,5 @@
 ---
-label: Pages
+label: pages
 hide_body: false
 is_partial: false
 fields:
@@ -28,5 +28,5 @@ fields:
   - partial-columns
   description: The sections to include in the page
 pages:
-- 404.md
 - index.md
+- 404.md
