--- a/.forestry/front_matter/templates/data-info.yml
+++ b/.forestry/front_matter/templates/data-info.yml
@@ -23,5 +23,5 @@ fields:
   name: ga_tracking_id
   label: Google Analytics Tracking ID
   description: e.g UA-123456789-1
-data_files:
+pages:
 - _data/info.yml
