--- a/.forestry/front_matter/templates/data-socials.yml
+++ b/.forestry/front_matter/templates/data-socials.yml
@@ -1,12 +1,12 @@
 ---
-label: data-socials
+label: Social Accounts Data
 hide_body: true
 is_partial: false
 fields:
 - type: field_group_list
   name: socials
-  label: Socials
-  description: Social and online accounts
+  label: Socials Accounts
+  description: Facebook, Twitter, etc.
   fields:
   - type: text
     label: Title
@@ -25,13 +25,13 @@ fields:
     config:
       source:
         type: documents
-        file: _data/icons.yml
-        path: ''
-        section: information
+        file: _data/theme.yml
+        path: icons
+        section: ''
       required: true
     label: Icon
     description: Font awesome icon
-    default: ''
+    default: Angel List
   config:
     labelField: title
 pages:
