--- a/.forestry/front_matter/templates/partial-columns.yml
+++ b/.forestry/front_matter/templates/partial-columns.yml
@@ -1,8 +1,15 @@
 ---
-label: Columns Partial
+label: Columns
 hide_body: false
 is_partial: true
+display_field: title
 fields:
+- type: text
+  label: Title
+  name: title
+  description: The title to display in CMS
+  config:
+    required: true
 - type: text
   name: id
   label: Section ID
