--- a/.forestry/front_matter/templates/partial-work.yml
+++ b/.forestry/front_matter/templates/partial-work.yml
@@ -1,7 +1,8 @@
 ---
-label: Work Partial
+label: Work Block
 hide_body: false
 is_partial: true
+display_field: title
 fields:
 - type: text
   label: Section ID
