Updated forestry settings

--- a/.forestry/front_matter/templates/data-info.yml
+++ b/.forestry/front_matter/templates/data-info.yml
@@ -4,12 +4,6 @@ hide_body: false
 is_partial: false
 fields:
 - type: text
-  name: name
-  label: Name
-  description: Personal name
-  config:
-    required: true
-- type: text
   name: email
   label: Email
   description: Contact email address
@@ -19,9 +13,36 @@ fields:
   name: company_name
   label: Company Name
   description: Company name
-- type: text
-  name: ga_tracking_id
-  label: Google Analytics Tracking ID
-  description: e.g UA-123456789-1
+- type: field_group_list
+  name: socials
+  label: Socials Accounts
+  description: Facebook, Twitter, etc.
+  fields:
+  - type: text
+    label: Title
+    name: title
+    description: e.g. Facebook
+    config:
+      required: true
+  - type: text
+    label: URL
+    name: url
+    description: e.g. https://facebook.com/username
+    config:
+      required: true
+  - type: select
+    name: icon
+    config:
+      source:
+        type: documents
+        file: _data/theme.yml
+        path: icons
+        section: ''
+      required: true
+    label: Icon
+    description: Font awesome icon
+    default: Facebook
+  config:
+    labelField: title
 pages:
 - _data/info.yml
