--- a/.forestry/settings.yml
+++ b/.forestry/settings.yml
@@ -4,6 +4,8 @@ auto_deploy: false
 admin_path: "/admin/"
 webhook_url: 
 sections:
+- type: heading
+  label: Collections
 - type: jekyll-pages
   label: Pages
   create: none
@@ -24,10 +26,10 @@ sections:
   label: Information
 - type: document
   path: _data/info.yml
-  label: General
+  label: Company
 - type: document
-  path: _data/socials.yml
-  label: Social Accounts
+  path: _config.yml
+  label: Site
 - type: document
   path: _data/theme.yml
   label: Theme
