--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 ---
-# Jekyll Settings
 title: Cody Winton
-timezone: America/Chicago
+timezone: America/Los_Angeles
 url: https://codywinton.com
+ga_tracking_id: UA-103616440-1
 baseurl: 
 # Enable once Forestry supports custom collections_dir
 # collections_dir: collections
